# HortusClavis

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 7c908761c0f1_initial.py  8c5e2f1a3b4d_roles_and_permissions.py
app/: config.py  database.py  main.py
app/models/: __init__.py  action.py  role.py  role_permission.py  service.py  user_role.py  users.py
app/routers/: __init__.py  admin.py  auth.py
app/schemas/: admin.py  auth.py
app/services/: __init__.py  auth.py  bootstrap.py  rbac.py  register.py  role.py
app/utils/: dependencies.py  logger.py  migrate.py  permissions.py  redis.py  security.py
charts/hortus-clavis/: Chart.yaml  README.md  values.yaml
charts/hortus-clavis/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
charts/hortus-clavis/templates/tests/: test-connection.yaml
skills/hc-migrate/: SKILL.md
tests/integration/: conftest.py  test_admin.py  test_auth.py
tests/unit/: test_security.py
